--- a/website-mh/src/index.css
+++ b/website-mh/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  width: 100%;
   background-color: #121212;
   /* Noir profond mais pas absolu */
   color: #e0e0e0;
